--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -34,7 +34,7 @@
 
 @media (min-width: $desktop-width) {
   .page__body--index {
-    background-image: linear-gradient(to left, rgba(104, 183, 56, 0.85) 50%, #ffffff 50%), image-set("../images/banner-background-cat-desktop@1x.jpg" 1x, "../images/banner-background-cat-desktop@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
+    background-image: linear-gradient(to left, rgba(104, 183, 56, 0.85) 50%, #ffffff 50%), image-set("../images/banner-background-cat-desktop@1x.webp" 1x, "../images/banner-background-cat-desktop@2x.webp" 2x, "../images/banner-background-cat-desktop@1x.jpg" 1x, "../images/banner-background-cat-desktop@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
     background-repeat: no-repeat;
     background-position: top right, top right, top right;
     background-size: 100% 694px, 720px 694px, 100% 693px;
