--- a/source/styles/blocks/gift-banner.scss
+++ b/source/styles/blocks/gift-banner.scss
@@ -49,7 +49,7 @@
 
 @media (min-width: $desktop-width) {
   .gift-banner {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-desktop@1x.webp" 1x, "../images/gift-banner-cat-desktop@2x.webp" 2x, "../images/gift-banner-cat-desktop@1x.jpg" 1x, "../images/gift-banner-cat-desktop@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-desktop@1x.webp" type("image/webp") 1x, "../images/gift-banner-cat-desktop@2x.webp" type("image/webp") 2x, "../images/gift-banner-cat-desktop@1x.jpg" type("image/jpeg") 1x, "../images/gift-banner-cat-desktop@2x.jpg" type("image/jpeg") 2x), linear-gradient(#4f4e54, #434248);
     display: block;
     padding: 43px 40px 20px;
 
